--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
+  background-image: url("https://www.google.com/search?client=safari&rls=en&q=w3images%2Fparallax2.jpg&ie=UTF-8&oe=UTF-8");
   min-height: 400px;
 }
 
