--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
+  background-image: url("/https://www.google.com/search?client=safari&rls=en&q=w3images%2Fparallax3.jpg&ie=UTF-8&oe=UTF-8");
   min-height: 400px;
 }
 
