--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/https://www.google.com/search?client=safari&rls=en&q=%2Fw3images%2Fparallax1.jpg&ie=UTF-8&oe=UTF-8');
+  background-image: url('/https://images.pexels.com/photos/9824355/pexels-photo-9824355.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
   min-height: 100%;
 }
 
