--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/https://images.pexels.com/photos/9824355/pexels-photo-9824355.jpeg");
+  background-image: url("https://images.pexels.com/photos/3779481/pexels-photo-3779481.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
   min-height: 400px;
 }
 
