--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/https://images.pexels.com/photos/9824355/pexels-photo-9824355.jpeg);
+  background-image: url('/https://images.pexels.com/photos/9824355/pexels-photo-9824355.jpeg');
   min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("https://images.pexels.com/photos/3779481/pexels-photo-3779481.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-image: url("https://images.pexels.com/photos/3779481/pexels-photo-3779481.jpeg");
   min-height: 400px;
 }
 
