--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 
   <!-- Images (Portfolio) -->
-  <img src="https://youtu.be/T9clKetuWw0" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img src="https://www.w3schools.com/w3images/ocean2.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="https://www.w3schools.com/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="https://www.youtube.com/watch?v=zJjG1MYOev4" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img src="https://images.pexels.com/photos/9584136/pexels-photo-9584136.jpeg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="https://images.pexels.com/photos/10366464/pexels-photo-10366464.jpeg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://www.w3schools.com/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://www.w3schools.com/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
   <br>
