--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Matt's Practice Website</title>
+<title>Matt practice website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -26,9 +26,9 @@
 <header class="w3-display-container w3-content w3-center" style="max-width:100%">
   <img class="w3-image" src="https://images.pexels.com/photos/10289544/pexels-photo-10289544.jpeg" alt="Me" height="250" width="100%">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
-    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Matt Applegate</h1>
-    <h5 class="w3-hide-large" style="white-space:nowrap">Matt Applegate</h5>
-    <h3 class="w3-hide-medium w3-hide-small">PHOTOGRAPHER</h3>
+    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Ethan Roda</h1>
+    <h5 class="w3-hide-large" style="white-space:nowrap">Ethan Roda</h5>
+    <h3 class="w3-hide-medium w3-hide-small">Website</h3>
   </div>
   
   <!-- Navbar (placed at the bottom of the header image) -->
