--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <img src="https://www.youtube.com/watch?v=zJjG1MYOev4" alt="Ocean" class="w3-image" width="1000" height="500">
   <img src="https://images.pexels.com/photos/10102276/pexels-photo-10102276.jpeg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://images.pexels.com/photos/3954349/pexels-photo-3954349.jpeg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="https://www.w3schools.com/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="https://www.w3schools.com/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="https://images.pexels.com/photos/7051049/pexels-photo-7051049.png" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="https://images.pexels.com/photos/10275590/pexels-photo-10275590.jpeg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
   <br>
   <br>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/T9clKetuWw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
