--- a/index.html
+++ b/index.html
@@ -70,21 +70,7 @@
     <hr>
     <p>Contact me regarding my Social media/Youtube here! 'eroda@lions.molloy.edu'</p>
 
-    <form action="https://www.w3schools.com//action_page.php" target="_blank">
-      <div class="w3-section">
-        <label>Name</label>
-        <input class="w3-input w3-border" type="text" required name="Name">
-      </div>
-      <div class="w3-section">
-        <label>Email</label>
-        <input class="w3-input w3-border" type="text" required name="Email">
-      </div>
-      <div class="w3-section">
-        <label>Message</label>
-        <input class="w3-input w3-border" required name="Message">
-      </div>
-      <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
-    </form><br>
+    <center><a href="https://www.youtube.com/channel/UCWds1St3xYFN2jGZmuENdfA><i class="fa fa-youtube" style="font-size:24px;"></i></a></center>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 
   </div>
