--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
   <img src="https://images.pexels.com/photos/7051049/pexels-photo-7051049.png" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://images.pexels.com/photos/10275590/pexels-photo-10275590.jpeg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
   <br>
-  <br>
+
+  </div>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/T9clKetuWw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="video-responsive">
   <iframe src="https://www.youtube.com/embed/lQCo6FbH2PY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/zJjG1MYOev4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  
+  <br>
+
+  </div>
+  <iframe width="560" height="315" src="https://youtu.be/_05As1MTOFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video-responsive">
   <!-- Contact -->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
     <h3 class="w3-center">Contact</h3>
