--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
     <h3 class="w3-center">Contact</h3>
     <hr>
-    <p>Contact me regarding my Social media/Youtube here! 'eroda@lions.molloy.edu'</p>
+    <p>Contact me regarding my Social media, Youtube here! This website shows work I have created online, it also shows my love for nature and fishing. 'eroda@lions.molloy.edu'</p>
 
     <center><a href="https://www.youtube.com/channel/UCWds1St3xYFN2jGZmuENdfA><i class="fa fa-youtube" style="font-size:24px;"></i></a></center>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
