--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     <p>Contact me regarding my Social media, Youtube here! This website shows work I have created online, it also shows my love for nature and fishing. 'eroda@lions.molloy.edu'</p>
 
     <center><a href="https://www.youtube.com/channel/UCWds1St3xYFN2jGZmuENdfA><i class="fa fa-youtube" style="font-size:24px;"></i></a></center>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <p>Powered by <a href="https://www.youtube.com/watch?v=_05As1MTOFw
+" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 
   </div>
 
