--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 .video-responsive iframe{
     left:0;
     top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
+    height:0;
+    width:;
+    position:relative;
 }
      <style>
 .video-responsive{
@@ -29,9 +29,9 @@
 .video-responsive iframe{
     left:0;
     top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
+    height:;
+    width:;
+    position:relative;
 }
  </style> 
  </style> 
