--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 
   <!-- Images (Portfolio) -->
-  <img src="https://www.youtube.com/watch?v=zJjG1MYOev4" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img src="https://www.pexels.com/photo/fishing-sea-dawn-landscape-5887837/" alt="Ocean" class="w3-image" width="1000" height="500">
   <img src="https://images.pexels.com/photos/10049600/pexels-photo-10049600.jpeg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://images.pexels.com/photos/3954349/pexels-photo-3954349.jpeg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://images.pexels.com/photos/7051049/pexels-photo-7051049.png" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
