--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
  
 <body>
 
-<!-- Header -->
+<!-- Header --> "https://www.pexels.com/photo/fishing-sea-dawn-landscape-5887837/"
 <header class="w3-display-container w3-content w3-center" style="max-width:100%">
-  <img class="w3-image"src="https://www.pexels.com/photo/fishing-sea-dawn-landscape-5887837/" alt="" height="250" width="100%">
+  <img class="w3-image"src="file:///Users/ethanroda/Desktop/pexels-photo-5887837.jpeg" alt="" height="250" width="100%">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Ethan Roda</h1>
     <h5 class="w3-hide-large" style="white-space:nowrap">Ethan Roda</h5>
@@ -60,7 +60,7 @@
   <img src="https://images.pexels.com/photos/10275590/pexels-photo-10275590.jpeg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
   <br>
 
- 
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/_05As1MTOFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
  
   <iframe width="560" height="315" src="https://www.youtube.com/embed/zJjG1MYOev4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
