--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
  
 <body>
 
-<!-- Header --> "https://www.pexels.com/photo/fishing-sea-dawn-landscape-5887837/"
+<!-- Header --> ""
 <header class="w3-display-container w3-content w3-center" style="max-width:100%">
-  <img class="w3-image"src="file:///Users/ethanroda/Desktop/pexels-photo-5887837.jpeg" alt="" height="250" width="100%">
+  <img class="w3-image"src="https://photos.app.goo.gl/Zgu586CLw1vAWwGb8" alt="" height="250" width="100%">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Ethan Roda</h1>
     <h5 class="w3-hide-large" style="white-space:nowrap">Ethan Roda</h5>
